BUG#13724 conditionally added CONNECTION='connect string' for SHOW CREATE TABLE